--- a/P2_JOURDAIN.css
+++ b/P2_JOURDAIN.css
@@ -64,8 +64,6 @@ nav li
    
     width: 400px;
     height: 30px;   
-    background-color: yellow;
-
 }
 /* -- filtre barre de recherche --*/
 
@@ -119,7 +117,6 @@ section
 .display_filtre
 {
     display: flex;
-    background-color: chartreuse;
     align-items: center;
     padding: 0;
 }
@@ -171,4 +168,74 @@ color: #0065fc;
 background-color:white;
 
     
+}
+
+/*main*/
+
+.article_hebergements
+{height: 400px;
+
+width:800px;
+
+background-color:#d9d9d9;
+-webkit-border-radius: 30px;
+-moz-border-radius: 30px;
+border-radius: 30px;
+justify-content: space-between;
+}
+
+
+article
+{display: flex;
+justify-content: space-between;
+justify-items: right;
+
+}
+
+.article_populaire
+{
+    height: 400px;
+
+    width:400px;
+
+    background-color:blue;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+
+    display: flex;
+}
+/*display hotel cannebiére */
+
+.hotel_cannebiére
+
+{
+    height: 150px;
+    width: 180px;
+    background-color:white;
+    margin-left:30px;
+    text-align: left;
+    font-size: 10px;
+    -webkit-border-radius: 30px;
+-moz-border-radius: 30px;
+border-radius: 30px;
+
+}
+
+.img_cannebiére
+{
+    width: 100%;
+    height: 60%;
+    -webkit-border-top-left-radius: 30px;
+-webkit-border-top-right-radius: 30px;
+-moz-border-radius-topleft: 30px;
+-moz-border-radius-topright: 30px;
+border-top-left-radius: 30px;
+border-top-right-radius: 30px;
+}
+
+.text_cannebiére
+{
+    padding-bottom: 9px;
+    padding-left: 10px;
 }
