--- a/P2_JOURDAIN.css
+++ b/P2_JOURDAIN.css
@@ -16,6 +16,8 @@ li
     list-style: none;
 }
 
+
+
 header
 {
     height: 50px;
@@ -28,7 +30,8 @@ nav
 {
     width: 100%;
     height: 50px;
-    position: absolute;    
+    position: absolute;  
+  
 }
 
 nav ul
@@ -44,16 +47,31 @@ nav li
     margin: 0 10px 0 20px;
     
 }
+a:hover
+{
+    color:green;
+}
 
 /* --- menu nav header --- */
 
-#change_color
+.change_color
 {
-    color: blue;
-    border: 1.5px blue inset;
-    border-right: none;
-    border-bottom: none;
-    border-left: none;
+    color:blue;
+    text-decoration:overline ;
+    border-top: 10px;
+    padding-bottom: 10px;
+    
+ }
+
+ .change_hypertext
+ {
+     text-decoration: none;
+     color:blue;
+ }
+ .change_hypertext1
+ {
+     text-decoration: none;
+     color:black;
  }
 
 /* --- section --- */
@@ -78,6 +96,7 @@ border-bottom-left-radius: 20px;
 height: 30px;
 width: 35px;
 border-style: none;
+pointer-events: none;
 
 
 }
@@ -174,7 +193,7 @@ background-color:white;
 /*main*/
 
 .article_hebergements
-{height: 400px;
+{height: 600px;
 
 width:800px;
 
@@ -182,7 +201,10 @@ background-color:#d9d9d9;
 -webkit-border-radius: 30px;
 -moz-border-radius: 30px;
 border-radius: 30px;
-justify-content: space-between;
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+
 }
 
 
@@ -203,10 +225,10 @@ justify-items: right;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     border-radius: 30px;
-
     display: flex;
+    
 }
-/*display hotel cannebiére */
+/*display hotel hebergement à Marseille*/
 
 .hotel_cannebiére
 
@@ -220,7 +242,6 @@ justify-items: right;
     -webkit-border-radius: 30px;
 -moz-border-radius: 30px;
 border-radius: 30px;
-
 
 }
 
