--- a/P2_JOURDAIN.css
+++ b/P2_JOURDAIN.css
@@ -1,10 +1,18 @@
 /*header*/
 /* --- global style --- */
+
+*
+{
+    margin: 0;
+    padding:0;
+}
 body
 {
     font-family: "Raleway",sans-serif ;
-    margin: O;    
+    margin: O;
+      
 }
+
 h1
 {
     font-size: 20px;
@@ -30,23 +38,24 @@ nav
 {
     width: 100%;
     height: 50px;
-    position: absolute;  
-  
+    display: flex;
+    justify-content: space-between;
+    
+    
 }
 
 nav ul
 {
     display:flex;
-    justify-content: flex-end;
-
 }
 
 
 nav li
 {
     margin: 0 10px 0 20px;
-    
+    padding-top: 15px;
 }
+
 a:hover
 {
     color:green;
@@ -67,11 +76,18 @@ a:hover
  {
      text-decoration: none;
      color:blue;
+     border-top: 1px solid;
+     
  }
  .change_hypertext1
  {
      text-decoration: none;
      color:black;
+ }
+
+ .logo-header
+ {
+     display: flex;
  }
 
 /* --- section --- */
@@ -82,7 +98,11 @@ a:hover
    
     width: 400px;
     height: 30px;   
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
+
 /* -- filtre barre de recherche --*/
 
 .button_researsch_left
@@ -129,6 +149,9 @@ section
 {
     height: 250px;
     text-align: left;
+    margin-top: 15px;
+    
+    
 }
 
 /* --- filtres --- */
@@ -137,7 +160,7 @@ section
 {
     display: flex;
     align-items: center;
-    padding: 0;
+    
 }
 
 
@@ -171,7 +194,8 @@ section
 {
     display:flex;
     align-items: center;
-    margin:0px;
+    margin-top: 10px;
+
 }
 .number_logements>i
 {
@@ -203,7 +227,7 @@ background-color:#d9d9d9;
 border-radius: 30px;
 display: flex;
 flex-direction: column;
-flex-wrap: wrap;
+
 
 }
 
@@ -225,10 +249,11 @@ justify-items: right;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     border-radius: 30px;
-    display: flex;
     
 }
 /*display hotel hebergement à Marseille*/
+
+
 
 .hotel_cannebiére
 
@@ -268,3 +293,5 @@ border-top-right-radius: 30px;
     color: blue;
     inside
 }
+
+
