--- a/P2_JOURDAIN.css
+++ b/P2_JOURDAIN.css
@@ -93,6 +93,8 @@ a:hover
 /* --- section --- */
 
 
+
+/* -- filtre barre de recherche --*/
 .barre_recherche
 {
    
@@ -100,11 +102,10 @@ a:hover
     height: 30px;   
     margin-top: 10px;
     margin-bottom: 10px;
+    display: flex;
+    
 }
-
-
-/* -- filtre barre de recherche --*/
-
+    
 .button_researsch_left
 {
 -webkit-border-top-left-radius: 20px;
@@ -134,6 +135,7 @@ height: 30px;
 border-style: none;
 background-color: #0065fc;
 color:white;
+border left:0;
 
 }
 
@@ -141,7 +143,7 @@ color:white;
 {
     height: 24px;
     padding: Opx;
-
+    margin: 0px;
 }
 
 
@@ -194,7 +196,7 @@ section
 {
     display:flex;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 20px;
 
 }
 .number_logements>i
@@ -217,19 +219,20 @@ background-color:white;
 /*main*/
 
 .article_hebergements
-{height: 600px;
-
-width:800px;
+{flex: 70%;
 
 background-color:#d9d9d9;
 -webkit-border-radius: 30px;
 -moz-border-radius: 30px;
 border-radius: 30px;
 display: flex;
-flex-direction: column;
-
+flex-wrap: wrap;
+padding-top: 80px;
+position: relative;
 
 }
+
+
 
 
 article
@@ -241,14 +244,24 @@ justify-items: right;
 
 .article_populaire
 {
-    height: 400px;
-
-    width:400px;
+   flex: 25%;
 
     background-color:blue;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     border-radius: 30px;
+    
+}
+
+.position_hebergement
+{
+    display:flex;
+    justify-content: space-between;
+}
+
+.titre_hebergement
+
+{
     
 }
 /*display hotel hebergement à Marseille*/
@@ -258,15 +271,18 @@ justify-items: right;
 .hotel_cannebiére
 
 {
-    height: 180px;
-    width: 180px;
+    
+    width: 23%;
     background-color:white;
-    margin-left:30px;
     text-align: left;
     font-size: 10px;
     -webkit-border-radius: 30px;
 -moz-border-radius: 30px;
 border-radius: 30px;
+margin:10px;
+padding: 5px;
+margin-left: 33px;
+
 
 }
 
@@ -294,4 +310,22 @@ border-top-right-radius: 30px;
     inside
 }
 
+/*--les plus populaires*/
 
+.titre_populaire
+{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.titre_populaire>h2
+
+{
+    padding-left: 40px;
+
+}
+.changement_populaire
+{
+    padding-right: 30px;
+}
