--- a/P2_JOURDAIN.css
+++ b/P2_JOURDAIN.css
@@ -230,7 +230,6 @@ border-radius: 30px;
 display: flex;
 flex-wrap: wrap;
 padding: 20px;
-justify-content: center;
 justify-content: space-around;
 
 }
@@ -244,11 +243,15 @@ justify-content: space-around;
 
 .section_populaire
 {
-   flex: 0 1 20%;
+   flex: 0 1 25%;
     background-color:#d9d9d9;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
     
 }
 
@@ -293,7 +296,7 @@ height:33%;
 .text_cannebiére
 {
     
-    padding: 30px;
+    padding: 10px;
 }
 
 #change_color_star
@@ -333,7 +336,7 @@ border-radius: 30px;
 
 .hotel_populaires
 {
-    width: 70%;
+    width: 75%;
     height: 33%;
     background-color:white;
     text-align: left;
@@ -345,18 +348,13 @@ margin:20px;
 padding: 5px;
 margin-left: 33px;
 display: flex;
+justify-content: center;
 
 }
 
 .img_soleil_du_matin
 {
-    width: 50%;
-    height: 50%;
-    border-radius: 10px;
-border-top-left-radius: 15px;
-border-bottom-left-radius: 15px;
-padding-left: 3px;
-   
+   width: 100%;
 }
 
 .text_soleil_du_matin
@@ -377,3 +375,16 @@ padding-top: 10px;
     margin-bottom: 10px;
 }
 
+
+.img_container_populaire
+{ 
+
+    height: 100px;
+    width: 200px;
+    overflow: hidden;
+    align-items: center;
+    display: flex;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+
+}
