--- a/P2_JOURDAIN.css
+++ b/P2_JOURDAIN.css
@@ -67,7 +67,7 @@ nav li
 
 a:hover
 {
-    color:blue;
+    color:#0065fc;
     border-top: 1px solid;
     padding-top: 10px;
     
@@ -78,14 +78,14 @@ a:hover
 
 .change_color
 {
-    color:blue;
+    color:#0065fc;
     
  }
 
  .change_hypertext
  {
      text-decoration: none;
-     color:blue;
+     color:#0065fc;
      
  }
  .change_hypertext1
@@ -249,7 +249,7 @@ justify-content: space-between;
 
 .section_hebergements
 {flex: 0 1 70%;
-background-color:#d9d9d9;
+background-color:#F2F2F2;
 border-radius: 20px;
 display: flex;
 flex-wrap: wrap;
@@ -269,7 +269,7 @@ justify-content: space-around;
 .section_populaire
 {
    flex: 0 1 25%;
-    background-color:#d9d9d9;
+    background-color:#F2F2F2;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
@@ -410,6 +410,13 @@ padding-top: 10px;
 
 /*--Position Activité*/
 
+.titre_hebergement_activité
+{
+    margin-bottom:10px;
+    padding-left: 25px;
+    margin-top: 10px;
+}
+
 .global_position_activity
 {
     display: flex;
@@ -473,27 +480,26 @@ padding-top: 10px;
 .footer
 
 {
+    flex: 1 1 100%;
+    height: 200px;
+    background-color: #F2F2F2;
+    margin-top: 50px;
     display: flex;
-    flex: 0 1 100%;
     justify-content: flex-start;
-    background-color:#d9d9d9;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 13px;
+    align-items: center;
 }
 
-.footer_space
+.footer_position
 { 
-   margin:48px 250px 48px 0px;
+   display: flex;
+   width: 80%;
+   justify-content: space-between;
 }
 
 .title_footer
-
 {
- margin-bottom: 15px;
+  padding-bottom:8px;
 }
-
-
 
 
 
