--- a/styleResponsive.css
+++ b/styleResponsive.css
@@ -1,11 +1,13 @@
+ @media screen (max-width:767px)
+ {
 
-/*global style*/
-*
-{
-    margin: 0;
-    padding: 0;
-}
-h1
+ /*global style*/
+     *
+ {
+         margin: 0;
+         padding: 0;
+        }
+        h1
 {
     margin-bottom: 10px;
 }
@@ -18,7 +20,7 @@ section
 /*barre de recherche*/
 .barre_recherche
 {
-justify-content: center;
+    justify-content: center;
 }
 
 
@@ -30,7 +32,7 @@ justify-content: center;
 }
 nav>ul
 {
- flex-direction: column;
+    flex-direction: column;
 }
 .display_filtre
 {
@@ -96,26 +98,26 @@ nav>ul
 }
 .big_image
 {
- height: 100px;
+    height: 100px;
 }
 .midle_image
 {
-height: 100px;
+    height: 100px;
 }
 .small_image
 {
-height: 100px;
+    height: 100px;
 }
 .big_image
 {
-height: 100px;
+    height: 100px;
 }
 
 /*footer*/
 
 .footer_position
 {
- flex-direction: column;
+    flex-direction: column;
 }
 footer
 {
@@ -132,4 +134,6 @@ footer
 .footer_text
 {
     margin:20px;
+}
+
 }
