--- a/style.css
+++ b/style.css
@@ -179,26 +179,32 @@ display: flex;
     margin-left: 10px;
     display: flex;
     align-items: center;
-
 }
 
 .icon_filter 
 {
-    border-radius: 40px;
-    padding: 8px;
-    border:2px solid #deebff ;
-    color: #0065fc;
-    background-color:#deebff;
-    margin-right: 14px;
-    margin-left:-7px;
-    
+color: #0065fc;
 }
 
+.circle_filter
+{
+  border-radius: 30px;
+  background-color:#deebff;
+  border: 2px solid none;
+  height: 27px;
+  width:27px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -1px;
+}
 
 .spacing_filter
 {
     margin-left: 15px;
     font-size: 17px;
+    display: flex;
 }
 
 .position_filter
@@ -215,6 +221,7 @@ padding-top: 10px;
     display:flex;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 11px;
 
 }
@@ -287,6 +294,7 @@ justify-content: space-around;
 
 {
    flex:1 1 100%;
+   margin-left: 30px;
 }
 
 
@@ -299,9 +307,9 @@ justify-content: space-around;
     background-color:white;
     text-align: left;
     font-size: 10px;
-padding: 5px;
+padding: 3px;
 margin-bottom: 10px;
-height:33%;
+height:37%;
 border-radius:10px;
 }
 
@@ -338,8 +346,9 @@ border-top-right-radius: 10px;
 {
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 15px;
     padding-bottom: 10px;
+    align-items: center;
 }
 
 .titre_populaire>h2
@@ -350,7 +359,7 @@ border-top-right-radius: 10px;
 }
 .changement_populaire
 {
-    padding-right: 30px;
+    padding-right:20px ;
 }
 
 .hotel_populaires
@@ -473,7 +482,17 @@ padding-top: 10px;
 }
 
 /*footer*/
-
+.Hypertext_footer:hover
+{
+    color: black;
+    text-decoration: none;
+    border-top: none;
+    color:#0065fc;
+}
+.Hypertext_footer
+{
+    color: black;
+}
 
 .footer
 
