--- a/style.css
+++ b/style.css
@@ -368,24 +368,33 @@ border-top-right-radius: 10px;
     height: 33%;
     background-color:white;
     text-align: left;
-    font-size: 10px;
+    font-size: 8px;
 border-radius: 8px;
-margin:20px;;
+margin:15px;
 margin-left: 33px;
 display: flex;
-justify-content: center;
 padding:3px;
+align-items: center;
 
 }
 
 .img_soleil_du_matin
 {
-   width: 100%;
+   height: 100px;
 }
-
+.img_eau
+{
+ height: 120px;
+ 
+}
+.img_blanc
+{
+height: 240px;
+}
 .text_soleil_du_matin
 {
     padding:8px;
+    flex: 40%;
     
 }
 
@@ -405,12 +414,12 @@ padding-top: 10px;
 { 
 
     height: 100px;
-    width: 200px;
     overflow: hidden;
     align-items: center;
     display: flex;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
+    flex: 30%;
 
 }
   
