--- a/style.css
+++ b/style.css
@@ -247,9 +247,17 @@ background-color:white;
 /*display hotel hebergement à Marseille*/
 a.lien_Hebergements
 {
-    display: block;
-    height: 60px; 
-    text-indent:-9999px;
+    text-decoration:none;
+    color: black;
+    
+}
+.lien_Hebergements:hover
+{
+    color: #0065fc;
+    border: 0px;
+    border-style:none ;
+    margin: 0px;
+    padding: 0px;
 }
 
 article
@@ -348,6 +356,23 @@ border-top-left-radius: 10px;
 border-top-right-radius: 10px;
 }
 /*--les plus populaires*/
+
+
+a.lien_Hebergements_pop
+{
+    text-decoration:none;
+    color: black;
+    display: flex;
+    
+}
+.lien_Hebergements_pop:hover
+{
+    color: #0065fc;
+    border: 0px;
+    border-style:none ;
+    margin: 0px;
+    padding: 0px;
+}
 
 .titre_populaire
 {
