--- a/style.css
+++ b/style.css
@@ -600,19 +600,24 @@ display: none;
 }
 
 /*header*/
+.last_child
+{
+    position:absolute;
+    font-size: 30px;
+}
 .logo-header
 {
-
+    width: 150px;
 }
-
+nav>ul
+{
+    flex-direction:column;
+}
 nav
 {
 
 }
-nav>ul
-{
-    flex-direction: column;
-}
+
 .inscrire_order
 {
  order:1; 
