--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ header
 {
     height: 50px;
     width: 100%;
-   
 }
 
 nav
@@ -600,28 +599,47 @@ display: none;
 }
 
 /*header*/
-.last_child
-{
-    position:absolute;
-    font-size: 30px;
-}
-.logo-header
-{
-    width: 150px;
-}
+
 nav>ul
 {
-    flex-direction:column;
+    justify-content: space-around;
+    width: 100%;
+    display: flex;
 }
-nav
+
+nav>ul>li:nth-child(1)
 {
+    position: absolute;
+    padding-top: 50px;
+    margin-right: 260px;
 
 }
+nav>ul>li:nth-child(2)
+{
+    position: absolute;
+    padding-top: 50px;
+    margin-left:50px ;
+}
+:hover.responsive_link
+{
+    border-bottom: 1px solid #0065fc;
+    border-top: none;
+}
 
+.change_hypertext
+{
+    font-size: 20px;
+    font-weight: bold;
+}
+.change_hypertext1
+{
+    font-size: 20px;
+    font-weight:inherit;
+}
 .inscrire_order
 {
  order:1; 
- 
+ padding-left: 120px;
 }
 .hebergement_order
 {
